[package]
name = "wasm_img_convert"
version = "0.1.0"
edition = "2021"
description = "Webassembly to convert a color image into a grayscale."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image="0.24.3"
base64 = "0.13.0"
wasm-bindgen = "0.2.82"

[dependencies.web-sys]
version = "0.3.59"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'HtmlImageElement',
  'Node',
  'Window',
]
